kind-cluster/CloDrive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: clodrive-ingress
  namespace: clodrive

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: clodrive-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: clodrive-backend-service
                port:
                  number: 5000
